[gd_scene load_steps=8 format=3 uid="uid://basativb1in2w"]

[ext_resource type="StyleBox" uid="uid://0m2yi04ex4ug" path="res://styles/button_style_hover.tres" id="1_cdhdt"]
[ext_resource type="StyleBox" uid="uid://tj2vxhwb65yp" path="res://styles/button_style_flat.tres" id="2_u34lt"]
[ext_resource type="StyleBox" uid="uid://bcf4eli6jlitk" path="res://styles/button_style_pressed.tres" id="3_u34lt"]
[ext_resource type="PackedScene" uid="uid://damtteqgm0fsv" path="res://szenes/slot_level.tscn" id="4_0iwix"]
[ext_resource type="Script" uid="uid://dpdeenbwjx0fr" path="res://scripts/ui.gd" id="4_8fw3k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cdhdt"]

[sub_resource type="Theme" id="Theme_wdjd2"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 40
Button/styles/focus = SubResource("StyleBoxEmpty_cdhdt")
Button/styles/hover = ExtResource("1_cdhdt")
Button/styles/normal = ExtResource("2_u34lt")
Button/styles/pressed = ExtResource("3_u34lt")

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_wdjd2")
script = ExtResource("4_8fw3k")

[node name="UI_Start" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -144.5
offset_right = 170.0
offset_bottom = 144.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI_Start"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI_Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -129.5
offset_right = 154.0
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="button_play" type="Button" parent="UI_Start/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="button_settings" type="Button" parent="UI_Start/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="button_quit" type="Button" parent="UI_Start/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="UI_Levels" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.0
offset_top = -160.0
offset_right = 355.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI_Levels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="UI_Levels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -130.0
offset_right = 328.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="SlotLevel" parent="UI_Levels/GridContainer" instance=ExtResource("4_0iwix")]
layout_mode = 2
number = 1

[node name="SlotLevel2" parent="UI_Levels/GridContainer" instance=ExtResource("4_0iwix")]
layout_mode = 2
number = 2

[node name="SlotLevel3" parent="UI_Levels/GridContainer" instance=ExtResource("4_0iwix")]
layout_mode = 2
number = 3

[node name="SlotLevel4" parent="UI_Levels/GridContainer" instance=ExtResource("4_0iwix")]
layout_mode = 2
number = 4

[node name="SlotLevel5" parent="UI_Levels/GridContainer" instance=ExtResource("4_0iwix")]
layout_mode = 2
number = 5

[node name="SlotLevel6" parent="UI_Levels/GridContainer" instance=ExtResource("4_0iwix")]
layout_mode = 2
number = 6

[node name="SlotLevel7" parent="UI_Levels/GridContainer" instance=ExtResource("4_0iwix")]
layout_mode = 2
number = 7

[node name="SlotLevel8" parent="UI_Levels/GridContainer" instance=ExtResource("4_0iwix")]
layout_mode = 2
number = 8

[node name="SlotLevel9" parent="UI_Levels/GridContainer" instance=ExtResource("4_0iwix")]
layout_mode = 2
number = 9

[node name="SlotLevel10" parent="UI_Levels/GridContainer" instance=ExtResource("4_0iwix")]
layout_mode = 2
number = 10

[connection signal="pressed" from="UI_Start/VBoxContainer/button_play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="UI_Start/VBoxContainer/button_settings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="UI_Start/VBoxContainer/button_quit" to="." method="_on_button_quit_pressed"]
